# TranscriptKe

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  institutions.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  institution.py  user.py
backend/app/schemas/: __init__.py  auth.py  institution.py
